--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   baonq_telebot:
     image: ghcr.io/baonq243/cowbot:latest
+    volumes:
+    - /var/log/cowbot:/var/log/cowbot
     environment:
       - LIST_ADMIN
       - LIST_ALLOW
